--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "mhmzdev-666"
-  }
+    "default": "myprotfolio-9076f",
+    "protfolio": "myprotfolio-9076f",
+    "Aneeshweb": "myprotfolio-9076f"
+  },
+  "targets": {},
+  "etags": {}
 }
