--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Hamza",
-    "short_name": "Hamza",
+    "name": "Aneesh",
+    "short_name": "Aneesh",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#000000",
